@@ -1,10 +1,18 @@
 version 0.6.3 - xx-Jan-2009
  . Actions: ScaleTo & ScaleBy supports X and Y factors (issue #156)
  . Actions: Added collections of Ease Actions (issue #157)
+ . Chipmunk: cpFlaot is a float, not a double (issue #130)
  . CocosNode: fixed absolutePosition (issue #140)
  . CocosNode: unschedule timers only when running (issue #142)
+ . CocosNode: prevents crash under certain circumstances while executing actions (issue #141)
+ . Director: allow cleanup when deallocing the director (issue #144)
+ . Director: avoid useless GL commands when displaying FPS (issue #162)
  . Menu: MenuItemToggle supports assigning the selectedIndex (issue #152)
+ . Menu: aligment takes into account if status bar is present (issue #131)
+ . MenuItem: improved compiler warning (issue #147)
+ . Misc: added 'f' to numbers so they are floats, not doubles (issue #130)
  . Particles: added ParticleRain (issue #136)
+ . Sprites: fixed possible memory leaks (issue #139)
  . Particles: center of emitter can be moved independently from position (issue #138)
  . Texture2D: prevent allocating more memory than needed (issue #154)
  . TextureMgr: supports directories withing the image name (issue #151)
